--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ordentjs/adonis-drive",
+  "name": "@ordent/adonis-drive",
   "version": "1.0.0",
   "description": "Driver based file system built on top of flydrive",
   "main": "index.js",
