--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "author": "virk",
   "license": "MIT",
   "dependencies": {
-    "@slynova/flydrive": "^1.0.0-0"
+    "@slynova/flydrive": "^1.0.2",
+    "@slynova/flydrive-gcs": "^1.0.2"
   },
   "devDependencies": {
     "@adonisjs/fold": "^4.0.9",
@@ -70,5 +71,9 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adonisjs/drive.git"
   }
 }
