--- a/package.json
+++ b/package.json
@@ -74,6 +74,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adonisjs/drive.git"
+    "url": "git+https://github.com/ordent/adonis-drive.git"
   }
 }
