--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ordentco/adonis-drive",
-  "version": "1.0.2",
+  "version": "1.0.2-0",
   "description": "Driver based file system built on top of flydrive",
   "main": "index.js",
   "files": [
